# DosboxStagingReplacerForGOGGalaxy

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
docs/: Diagram.drawio
factories/: StatementEngineParserFactory.cpp  StatementEngineParserFactory.h
helpers/: CoreHelperModels.h
helpers/exporters/: DataExporter.cpp  DataExporter.h
helpers/finders/: InstallationFinder.cpp  InstallationFinder.h
helpers/scanners/: DirectoryScanner.cpp  DirectoryScanner.h
helpers/verifiers/: DosboxVerifier.cpp  DosboxVerifier.h  InstallationVerifier.cpp  InstallationVerifier.h
interfaces/: SqliteStatementParser.cpp  SqliteStatementParser.h  StatementParser.cpp  StatementParser.h
models/: Data.cpp  Data.h  FileEntity.h  InstallationInfo.h
models/results/: ProductDetails.cpp  ProductDetails.h  SqliteSchema.cpp  SqliteSchema.h  base.cpp  base.h
services/: ScriptEditService.cpp  ScriptEditService.h
services/gog/: GoGService.cpp  GoGService.h  GogGalaxyService.cpp  GogGalaxyService.h  Service.cpp  Service.h
services/sql/: SQLService.cpp  SQLService.h  Service.cpp  Service.h  SqlService.cpp  SqlService.h  sql.cpp  sql.h  sqlite.cpp  sqlite.h
services/system/: FileBackupService.cpp  FileBackupService.h
tests/: TestDirectoryScanner.cpp  TestGogGalaxyService.cpp  TestInstallationVerifier.cpp  TestSqliteService.cpp
tests/data/: valid.sqlite
